style: fix content width on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
 
   a {
     @apply font-medium underline decoration-blue-600 underline-offset-4;
-    @apply mx-[0.5ch] text-neutral-700 hover:text-neutral-800;
+    @apply text-neutral-700 hover:text-neutral-800;
     /* dark */
     @apply relative dark:text-neutral-400 dark:hover:text-neutral-300;
   }
